; ModuleID = '/home/carl/AnghaBench/linux/drivers/iio/adc/extr_stm32-dfsdm-adc.c_stm32_dfsdm_stop_filter.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iio/adc/extr_stm32-dfsdm-adc.c_stm32_dfsdm_stop_filter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stm32_dfsdm = type { i32 }

@DFSDM_CR1_DFEN_MASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.stm32_dfsdm*, i32)* @stm32_dfsdm_stop_filter to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @stm32_dfsdm_stop_filter(%struct.stm32_dfsdm* %0, i32 %1) #0 {
  %3 = alloca %struct.stm32_dfsdm*, align 8
  %4 = alloca i32, align 4
  store %struct.stm32_dfsdm* %0, %struct.stm32_dfsdm** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.stm32_dfsdm*, %struct.stm32_dfsdm** %3, align 8
  %6 = getelementptr inbounds %struct.stm32_dfsdm, %struct.stm32_dfsdm* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load i32, i32* %4, align 4
  %9 = call i32 @DFSDM_CR1(i32 %8)
  %10 = load i32, i32* @DFSDM_CR1_DFEN_MASK, align 4
  %11 = call i32 @DFSDM_CR1_DFEN(i32 0)
  %12 = call i32 @regmap_update_bits(i32 %7, i32 %9, i32 %10, i32 %11)
  ret void
}

declare dso_local i32 @regmap_update_bits(i32, i32, i32, i32) #1

declare dso_local i32 @DFSDM_CR1(i32) #1

declare dso_local i32 @DFSDM_CR1_DFEN(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
